# Solana-DVPN

./: .gitignore  README.md  discriminator_calculator.rs
dvpn-client/: .gitignore  Anchor.toml  Cargo.toml  bun.lockb  new-app.json  package.json  recover.json
dvpn-client/programs/dvpn-client/: Cargo.toml
dvpn-client/programs/dvpn-client/src/: lib.rs
dvpn-client/src/: main.rs
dvpn-client/tests/: dvpn-client.ts
dvpn-program/: Anchor.toml  CalcScenario.md  Cargo.toml  recover.json
dvpn-program/programs/dvpn-program/: Cargo.toml
dvpn-program/programs/dvpn-program/src/: lib.rs
dvpn-program/tests/: dvpn-client.ts
dvpn-server/: .env  bun.lockb  install.sh  package.json  server-handler.js  server.js
dvpn-server/cert/: cert.pem  key.pem
solana-program/: Anchor.toml  bun.lockb  package-lock.json
solana-program/programs/solana_dvpn/: Cargo.toml
solana-program/tests/: solana_dvpn.js
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-7300-Bu3QU69qwdXjjPibeMtFKxXRr7qLwoyzDRjaJLD9PtaU.tar.zst  snapshot-7400-DTRXUrYzuqMCTY6B4H82DwfKv7ZzxJgD42n4ioK6h61p.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/accounts/run/: 0.1  2800.28  2900.29  3000.30  3100.31  3200.32  3300.33  3324.35  3324.38  3400.34  3500.36  3600.39  3700.40  3800.41  3900.42  4000.43  4100.44  4200.45  4300.47  4400.48  4500.49  4600.52  4700.53  4800.54  4900.55  5000.56  5100.57  (+24 more)
test-ledger/rocksdb/: 000056.sst  000057.sst  000058.sst  000059.sst  000060.sst  000061.sst  IDENTITY  LOG  LOG.old.1724831920289715  MANIFEST-000063
(+9 files in other folders)
