[package]
name = "solana-dvpn-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "2.0"
solana-sdk = "2.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
wireguard = "0.4"  # Example if you're using WireGuard as the VPN protocol
